Add footer styling

--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ body {
 main {
     flex: 1 0 auto;
 }
-section {/* 
-    border: 4px solid red; */
+section {
+    border: 4px solid red;
 }
 
 .content {
@@ -70,7 +70,10 @@ nav {
     border-radius: 8px;
 }
 
-
+footer {
+    display: flex;
+    justify-content: center;
+}
 
 
 /* CONTENT MODULES */
@@ -113,6 +116,9 @@ nav {
 }
 .call-to-action .content {
     background-color: #3882f6;
+}
+footer {
+    background-color: #1f2937;
 }
 
 
@@ -164,4 +170,9 @@ h1 {
 .call-to-action p {
     font-size: 14px;
     color: #f9faf8;
+}
+
+footer {
+    font-size: 18px;
+    color: #e5e7eb;
 }
