--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 /* SETUP */
 * {
-    font-family:'Roboto', sans-serif;/* 
-    border: 2px solid lime; */
+    font-family:'Roboto', sans-serif;
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
@@ -17,6 +16,7 @@ a {
 html, body {
     height: 100%;
 }
+
 body {
     display: flex;
     flex-direction: column;
@@ -24,11 +24,15 @@ body {
 .footer, .nav {
     flex-grow: 0;
 }
+
 main {
     flex: 1 0 auto;
 }
-section {
-    border: 4px solid red;
+
+.header-links {
+    display: flex;
+    gap: 16px;
+
 }
 
 .content {
@@ -38,7 +42,14 @@ section {
 
 nav,
 .content {
-    margin: 0 10vw;
+    margin: 1rem  10vw;
+    align-items: center;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    padding: 32px 0;
 }
 
 
@@ -47,33 +58,43 @@ nav,
 nav {
     display: flex;
     justify-content: space-between;
+    padding-top: 16px;
 }
 
 .top .content {
     display: flex;
     gap: 32px;
+    padding: 100px  0;
 }
 
 .info .content {
     display: flex;
     flex-direction: column;
+    gap: 32px;
+    padding-top: 32px;
+    padding-bottom: 100px;
 }
 
 .quote .content {
     flex-direction: column;
     text-align: justify;
-    font-style: italic;
+    padding: 100px 15%;
 }
 
 .call-to-action .content {
     align-items: center;
+    justify-content: space-around;
+    min-width: 70%;
     border-radius: 8px;
 }
 
 footer {
     display: flex;
     justify-content: center;
+    padding: 24px 0;
 }
+
+
 
 
 /* CONTENT MODULES */
@@ -82,6 +103,7 @@ footer {
     color: #f9faf8;
     border-radius: 4px;
     padding: 10px 20px;
+    margin: 20px 0;
 }
 
 .card-container {
@@ -97,12 +119,8 @@ footer {
 
 .quote p {
     align-self: flex-end;
-    font-weight: bold;
-    font-style: normal;
+    padding-top: 10px;
 }
-
-
-
 
 
 
@@ -159,6 +177,19 @@ h1 {
 
 .info p {
     font-size: 12px;
+    color: #1f2937;
+}
+
+
+.quote span {
+    font-size: 24px;
+    font-style: italic;
+    color: #1f2937;
+}
+.quote p {
+    font-size: 16px;
+    font-weight: bold;
+    font-style: normal;
     color: #1f2937;
 }
 
